--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+# email used to send the alert
 SCRIPT_EMAIL_USER:"someaddress@gmail.com"
 SCRIPT_EMAIL_PASS:"somepassword"
+# your email
 ALERTED_EMAIL:"yourownemail@gmail.com"
