--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # email used to send the alert
-SCRIPT_EMAIL_USER:"someaddress@gmail.com"
-SCRIPT_EMAIL_PASS:"somepassword"
+SCRIPT_EMAIL_USER="someaddress@gmail.com"
+SCRIPT_EMAIL_PASS="somepassword"
 # your email
-ALERTED_EMAIL:"yourownemail@gmail.com"
+ALERTED_EMAIL="yourownemail@gmail.com"
