--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "googleapis": "^88.2.0",
     "nodemailer": "^6.6.3"
   }
 }
