--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# email used to send the alert
+
 SCRIPT_EMAIL_USER="someaddress@gmail.com"
-SCRIPT_EMAIL_PASS="somepassword"
-# your email
-ALERTED_EMAIL="yourownemail@gmail.com"
+ALERTED_EMAIL="your_email@gmail.com"
+REFRESH_TOKEN="someaddress_refresh_token"
+CLIENT_ID="someaddress_client_id.apps.googleusercontent.com"
+CLIENT_SECRET="someaddress_client_secret"
