--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "googleapis": "^88.2.0",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "path": "^0.12.7"
   }
 }
